--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "zdog": "metafizzy/zdog#master"
   },
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "parcel-bundler": "^1.12.3"
   }
 }
