--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "main": "src/index.html",
   "scripts": {
     "start": "parcel src/*.html --open",
-    "build": "PARCEL_WORKERS=1 parcel build src/index.html"
+    "build": "PARCEL_WORKERS=1 NODE_ENV=production parcel build src/*.html --public-url ./"
   },
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "parcel-bundler": "^1.12.3"
   }
 }
